--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
 	  lang="en">
 
 	<head>
-		<title>Register Form</title>
+		<title>Login Page</title>
 		<link rel="stylesheet" th:href="@{/css/spacelab/bootstrap.min.css}" />
 
 		<style>
